# Nyaa-rsearch

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: async.rs  blocking.rs  lib.rs
src/models/: categories.rs  error.rs  mod.rs  torrent.rs
