[package]
name = "nyaa-rsearch"
version = "0.1.5"
edition = "2021"
description = "A rust library for search Torrent on nyaa.si"
license = "MIT"
repository = "https://github.com/ALEZ-DEV/Nyaa-rsearch"
authors = ["ALEZ-DEV <raidersfocus@gmail.com>"]

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
tokio = { version = "1.34.0", features = ["full"] }
